<resources>

    <string name="app_name">Popular Movies</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_by_popularity">Most Popular</string>
    <string name="menu_by_vote_avg">Highest Rated</string>

    <string name="main_list_item_image_content_description">Movie Poster</string>

    <string name="detail_label_title">Title</string>
    <string name="detail_label_release_date">Release Date</string>
    <string name="detail_label_plot_synopsis">Plot Synopsis</string>
    <string name="detail_label_vote_avg">Vote Average</string>
    <string name="detail_label_videos">Videos</string>
    <string name="detail_label_reviews">Reviews</string>
    <string name="detail_button_add_to_favorites">Add to Favorites</string>
    <string name="detail_button_remove_from_favorites">Remove from Favorites</string>
    <string name="detail_toast_add_to_favorites">Added to Favorites</string>
    <string name="detail_toast_remove_from_favorites">Removed from Favorites</string>

    <string name="detail_list_item_video_icon_content_description">Movie Video</string>
    <string name="detail_list_item_video_type_default_text">Trailer</string>
    <string name="detail_list_item_video_name_default_text">Video</string>
    <string name="detail_list_item_review_author_default_text">Author</string>
    <string name="detail_list_item_review_content_default_text">Content</string>

    <string name="error_main_network">Error connecting to network</string>
    <string name="error_main_url">Error building database url</string>
    <string name="error_main_api">Error connecting to database</string>
    <string name="error_main_json">Error parsing movie data</string>
    <string name="error_detail">Movie data not available</string>

</resources>
